--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "mongodb/mongodb": "^1.1"
+        "mongodb/mongodb": "1.1",
+        "phpdocumentor/reflection-docblock": "^3.3"
     },
     "autoload": {
         "psr-4": {
