remove useless doc, add multi writer and gridfs function.

--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "require": {
         "mongodb/mongodb": "1.1",
-        "phpdocumentor/reflection-docblock": "^3.3"
+        "phpdocumentor/reflection-docblock": "^3.3",
+        "ext-mongodb": "*"
     },
     "autoload": {
         "psr-4": {
-            "Shein\\":"./src",
+            "FirstW\\":"./src",
             "Test\\":"./test"
         }
     }
